[ch12327] fix style on ie10/11 + adding news URL of documentations

--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -3,7 +3,6 @@
 @import 'variables';
 @import 'icon-font';
 // @import 'rtl'; // uncomment to switch to RTL format
-
 /*
 Copyright 2008-2013 Concur Technologies, Inc.
 
@@ -133,6 +132,13 @@ body {
         border: none;
     }
 }
+//- IE 10 / 11
+@media all and (-ms-high-contrast: active),
+(-ms-high-contrast:none) {
+    .ods-header__nav {
+        margin-left: 153px;
+    }
+}
 
 .ods-header__nav--active {
     right: 0;
@@ -152,6 +158,12 @@ body {
         &:last-child {
             margin-right: 0px;
         }
+    }
+}
+//- IE 10 / 11
+@media all and (-ms-high-contrast: active), (-ms-high-contrast:none) {
+   .ods-header__nav-item {
+        margin-top: 25px;
     }
 }
 
@@ -321,10 +333,10 @@ body {
     } // This is the currently selected ToC entry
     .toc-link.active {
         background-color: $blue-light;
-        color: white!important;
+        color: white !important;
         border: 1px solid transparentize($grey-dark, 0.6);
         &>a {
-            color: white!important;
+            color: white !important;
             font-weight: bold;
         }
     } // this is parent links of the currently selected ToC entry
@@ -394,9 +406,7 @@ body {
     padding-bottom: 1px;
     @media (max-width: $tablet-width) {
         margin-left: 0;
-    }
-    
-    // prevent margin overflow
+    } // prevent margin overflow
     // The dark box is what gives the code samples their dark background.
     // It sits essentially under the actual content block, which has a
     // transparent background.
@@ -598,7 +608,7 @@ body {
         margin-left: 15px;
     }
     li {
-        padding: 0 0.5em!important;
+        padding: 0 0.5em !important;
     }
     p,
     li,
